--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,9 +1,9 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
+@import './root';
+@import './carousel';
 
-// @import '@fontsource/roboto/300.css';
-// @import '@fontsource/roboto/400.css';
-// @import '@fontsource/roboto/500.css';
-// @import '@fontsource/roboto/700.css';
 $buttonPadding: 0.5rem 1rem;
 $inputPadding: 4px 8px;
 
