--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,12 +1,24 @@
+@import './reset.scss';
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import '~slick-carousel/slick/slick.css';
 @import '~slick-carousel/slick/slick-theme.css';
 @import './root';
 @import './carousel';
+@import './utility';
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
 
 $buttonPadding: 0.5rem 1rem;
 $inputPadding: 4px 8px;
 
+
+
+
+
 .bg-w {
 	background-color: #fff;
+}
+
+section {
+	padding: 20px 0;
 }
