--- a/src/component/UI/Content/Heading/styles.module.scss
+++ b/src/component/UI/Content/Heading/styles.module.scss
@@ -1,14 +1,22 @@
 .heading {
-	background: linear-gradient(180deg, rgb(80, 11, 119) 0%, rgb(107, 53, 139) 100%);
-	position: relative;
-	display: block;
-	padding: 12px 15px 7px;
-	margin: 0;
-	border-left: 7px solid #000;
-	color: #fff;
-	font-family: var(--ftitle);
-	font-weight: bold;
-	font-size: 19px;
-	line-height: 1.3;
-    text-transform: uppercase;
+	// background: linear-gradient(180deg, rgb(80, 11, 119) 0%, rgb(107, 53, 139) 100%);
+	// position: relative;
+	// display: block;
+	// padding: 12px 15px 7px;
+	// margin: 0;
+	// border-left: 7px solid #000;
+	// color: #fff;
+	// font-family: var(--ftitle);
+	// font-weight: bold;
+	// font-size: 19px;
+	// line-height: 1.3;
+	// text-transform: uppercase;
+}
+.header {
+	font-weight: 700;
+	font-size: 30px;
+}
+
+.center {
+	text-align: center;
 }
