apply upload file

--- a/src/assets/css/_carousel.scss
+++ b/src/assets/css/_carousel.scss
@@ -2,7 +2,10 @@
 .slick-next:before {
 	color: #333;
 }
-
+.slick-list {
+	width: calc(100% - 12px);
+	margin: 0 6px;
+}
 .slick-track {
 	&:before {
 		padding: 10px;
@@ -11,6 +14,24 @@
 		padding: 10px;
 	}
 	.slick-slide {
-		padding: 0 10px;
+		padding: 0 5px;
+	}
+}
+
+.slick-slider {
+	padding: 0 !important;
+	.slick-prev {
+		&:before {
+			font-size: 24px;
+		}
+	}
+	.slick-next {
+		&:before {
+			font-size: 24px;
+		}
+	}
+
+	.slick-dots {
+		bottom: 0;
 	}
 }
