--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -9,5 +9,6 @@ body {
 	font-family: 'Open Sans', sans-serif !important;
 	font-size: 16px;
 	font-weight: 300;
-    box-sizing: border-box;
+	box-sizing: border-box;
+	background-color: #f9fafa;
 }
