--- a/src/component/UI/Content/Catalog/styles.module.scss
+++ b/src/component/UI/Content/Catalog/styles.module.scss
@@ -13,57 +13,52 @@
 		flex-direction: column;
 		padding: 12px;
 		border-radius: 4px 0 0 4px;
-		.title {
-			font-size: 18px;
-			font-weight: 600;
-			color: rgba(51, 51, 51, 1);
-			width: auto;
-			margin-left: 0;
-			margin-right: auto;
-			justify-content: flex-start;
-			white-space: normal;
-			overflow: visible;
-			text-overflow: initial;
-		}
+
 		.content {
 			display: flex;
 			flex-direction: column;
 			gap: 8px;
-			.img {
-				cursor: pointer;
-
-				position: relative;
-				top: 0;
-				background: #eee;
-				border-radius: 4px;
-				border: 1px solid rgba(233, 102, 49, 0.15);
-				overflow: hidden;
-				transition: all 0.2s;
-				&:before {
-					padding-bottom: 100%;
-					display: block;
-					content: '';
-				}
-				img {
-					height: 100%;
-					width: 100%;
-					object-position: center;
-					object-fit: cover;
-					border: 0;
-					position: absolute;
-					top: 0;
-					left: 0;
-					border-radius: 4px;
-					transition: all 0.2s;
-				}
-
-				&:hover {
-					border: 1px solid rgba(233, 102, 49, 0.6);
-					img {
-						transform: scale(1.1);
+			.listLink {
+				direction: ltr;
+				ul {
+					list-style-type: none;
+					padding-left: 0;
+					li {
+						text-decoration: underline;
+						font-size: 14px;
+						cursor: pointer;
 					}
 				}
 			}
 		}
 	}
+
+	.lastCol {
+		display: flex;
+		flex-direction: column;
+		border-radius: 0 4px 4px 0;
+
+		.title {
+			padding: 12px 0 0 12px;
+			> div {
+				margin-left: 0;
+			}
+		}
+	}
+}
+.rtl {
+	direction: rtl;
+}
+
+.title {
+	font-size: 18px;
+	font-weight: 600;
+	color: rgba(51, 51, 51, 1);
+	width: auto;
+	margin-left: 0;
+	margin-right: auto;
+	justify-content: flex-start;
+	white-space: normal;
+	overflow: visible;
+	text-overflow: initial;
 }
