--- a/src/component/UI/Header/styles.module.scss
+++ b/src/component/UI/Header/styles.module.scss
@@ -4,18 +4,30 @@
 
 .brand {
 	position: relative;
-	&::before {
-		position: absolute;
-		top: 0;
-		left: 0;
-		display: block;
-		padding-bottom: 100%;
-	}
 	padding: 18px 100px;
-	span {
-		top: 50% !important;
+
+	> span {
+		position: absolute !important;
+		padding: 18px 100px !important;
+		top: 50%;
+		left: 0;
 		transform: translateY(calc(-50%));
 	}
+
+	// &::before {
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: 0;
+	// 	display: block;
+	// 	padding-bottom: 100%;
+	// 	content: '';
+	// }
+
+	// > span {
+	// 	// position: absolute;
+	// 	top: 50% !important;
+	// 	transform: translateY(calc(-50%));
+	// }
 }
 
 .nav {
