--- a/src/assets/css/_root.scss
+++ b/src/assets/css/_root.scss
@@ -12,4 +12,8 @@
 	--main-margin: 4px;
 	--main-box-shadow-hover: rgb(45 45 45 / 5%) 0 2px 2px, rgb(49 49 49 / 5%) 0 4px 4px, rgb(42 42 42 / 5%) 0 8px 8px, rgb(32 32 32 / 5%) 0 16px 16px,
 		rgb(49 49 49 / 5%) 0 32px 32px, rgb(35 35 35 / 5%) 0 64px 64px;
+
+	--primary-color: #f92c2c;
+	--secondary-color: #3e3838;
+	// --rs-navbar-inverse-hover-bg: #f92c2c;
 }
