--- a/src/pages/admin/pages/[slug]/styles.module.scss
+++ b/src/pages/admin/pages/[slug]/styles.module.scss
@@ -31,12 +31,12 @@
 	overflow-x: auto;
 }
 .listCate {
-	display: grid;
-	grid-template-columns: repeat(10, minmax(120px, 1fr));
-	column-gap: 12px;
-	row-gap: 12px;
+	display: flex;
+	gap: 12px;
+	overflow-x: auto;
 }
 .cateItem {
+	width: 120px;
 	display: flex;
 	padding: 8px;
 	font-size: 16px;
@@ -55,6 +55,7 @@
 	position: relative;
 	text-align: left;
 	transition: var(--main-transition);
+	flex: 0 0 120px;
 	cursor: pointer;
 
 	&:hover {
