setup post category

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -6,6 +6,7 @@
 @import './utility';
 @import './rsuite';
 @import './root';
+@import './loader';
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
 
