--- a/src/pages/tin-tuc/[slug]/styles.module.scss
+++ b/src/pages/tin-tuc/[slug]/styles.module.scss
@@ -1,3 +1,28 @@
 .heading {
-    padding:40px;
+	padding: 150px 0;
+	background-color: #ccc;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	position: relative;
+	&:before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		content: '';
+		z-index: 0;
+	}
+	div {
+		z-index: 1;
+		position: relative;
+		h3 {
+			color: #eee;
+			text-align: center;
+		}
+	}
+    margin: 10px 0;
 }
