--- a/src/assets/css/_rsuite.scss
+++ b/src/assets/css/_rsuite.scss
@@ -69,3 +69,14 @@
   }
 }
 
+
+
+.product_detail {
+  .rs-panel-body {
+    padding: 12px;
+    padding-top:0;
+  }
+  .rs-panel-header {
+    padding: 12px;
+  }
+}
