--- a/src/pages/product/[slug]/styles.module.scss
+++ b/src/pages/product/[slug]/styles.module.scss
@@ -23,8 +23,95 @@
 }
 
 .form {
-  div {
+  div:not(.grid) {
     display: flex;
     align-items: center;
+  }
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 8px;
+  column-gap: 8px;
+}
+
+.skuSelect {
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  height: 100%;
+}
+
+.active {
+  --bs-border-color: var(--rs-red-800);
+  background-color: var(--rs-red-800);
+  color: #fff;
+}
+
+.groupVariant {
+  @media (max-width: 1200px) {
+    flex-wrap: wrap;
+    .divider {
+      display: none;
+    }
+    .productPricing {
+      text-align: center;
+      // font-size: px;
+      margin: 0 auto;
+    }
+  }
+}
+.productPricing {
+  font-weight: 600;
+  color: var(--rs-red-800);
+  display: flex;
+  max-width: 100%;
+  flex-shrink: 0;
+  font-size: 20px;
+}
+
+.btnIcon {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 16px;
+
+  svg {
+    font-size: 24px;
+  }
+}
+.productContent {
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+  .btnToggle {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -10px);
+    background-color: #fff;
+    z-index: 2;
+  }
+  &:after {
+    position: absolute;
+    z-index: 1;
+    background-image: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 1)
+    );
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+  }
+}
+.open {
+  height: 100%;
+  &::after {
+    display: none;
   }
 }
