--- a/src/pages/product/[slug]/styles.module.scss
+++ b/src/pages/product/[slug]/styles.module.scss
@@ -44,8 +44,8 @@
 }
 
 .active {
-  --bs-border-color: var(--rs-red-800);
-  background-color: var(--rs-red-800);
+  --bs-border-color: var(--rs-blue-800);
+  background-color: var(--rs-blue-800);
   color: #fff;
 }
 
@@ -57,8 +57,21 @@
     }
     .productPricing {
       text-align: center;
-      // font-size: px;
       margin: 0 auto;
+
+      &.variantPricing {
+        order: 1;
+        flex: 1;
+        flex-direction: column;
+        &:before {
+          height: 1px;
+          margin: 24px 0;
+          content: '';
+          width: 100%;
+          display: block;
+          background: rgba(0, 0, 0, 0.1);
+        }
+      }
     }
   }
 }
@@ -69,6 +82,7 @@
   max-width: 100%;
   flex-shrink: 0;
   font-size: 20px;
+  flex: 0 0 150px;
 }
 
 .btnIcon {
@@ -102,7 +116,7 @@
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 1)
     );
-    content: "";
+    content: '';
     bottom: 0;
     left: 0;
     width: 100%;
