--- a/src/component/UI/Content/Catalog/styles.module.scss
+++ b/src/component/UI/Content/Catalog/styles.module.scss
@@ -1,64 +1,90 @@
 .grid {
-	display: grid;
-	grid-template-columns: 20% 80%;
+  display: grid;
+  grid-template-columns: 20% 80%;
 
-	box-shadow: var(--main-box-shadow);
-	.col {
-		background: #fff;
-		border: 1px solid #eee;
-	}
+  box-shadow: var(--main-box-shadow);
+  .col {
+    background: #fff;
+    border: 1px solid #eee;
+  }
 
-	.firstCol {
-		display: flex;
-		flex-direction: column;
-		padding: 12px;
-		border-radius: 4px 0 0 4px;
+  .firstCol {
+    display: flex;
+    flex-direction: column;
+    padding: 12px;
+    border-radius: 4px 0 0 4px;
 
-		.content {
-			display: flex;
-			flex-direction: column;
-			gap: 8px;
-			.listLink {
-				direction: ltr;
-				ul {
-					list-style-type: none;
-					padding-left: 0;
-					li {
-						text-decoration: underline;
-						font-size: 14px;
-						cursor: pointer;
-					}
-				}
-			}
-		}
-	}
+    .content {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      .listLink {
+        direction: ltr;
+        ul {
+          list-style-type: none;
+          padding-left: 0;
+          li {
+            text-decoration: underline;
+            font-size: 14px;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
 
-	.lastCol {
-		display: flex;
-		flex-direction: column;
-		border-radius: 0 4px 4px 0;
+  .lastCol {
+    display: flex;
+    flex-direction: column;
+    border-radius: 0 4px 4px 0;
 
-		.title {
-			padding: 12px 0 0 12px;
-			> div {
-				margin-left: 0;
-			}
-		}
-	}
+    .title {
+      padding: 12px 0 0 12px;
+      > div {
+        margin-left: 0;
+      }
+    }
+  }
+
+  @media (max-width: 767px) {
+    grid-template-columns: 40% 60%;
+  }
+  @media (max-width: 625px) {
+    grid-template-columns: 100%;
+    .firstCol {
+      display: flex;
+      flex-direction: column;
+      padding: 24px;
+      border-radius: 4px 0 0 4px;
+
+      .content {
+        .listLink {
+          ul {
+            li {
+              text-decoration: none;
+              font-size: 16px;
+              cursor: pointer;
+              padding: 6px 0px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 .rtl {
-	direction: rtl;
+  direction: rtl;
 }
 
 .title {
-	font-size: 18px;
-	font-weight: 600;
-	color: rgba(51, 51, 51, 1);
-	width: auto;
-	margin-left: 0;
-	margin-right: auto;
-	justify-content: flex-start;
-	white-space: normal;
-	overflow: visible;
-	text-overflow: initial;
+  font-size: 18px;
+  font-weight: 600;
+  color: rgba(51, 51, 51, 1);
+  width: auto;
+  margin-left: 0;
+  margin-right: auto;
+  justify-content: flex-start;
+  white-space: normal;
+  overflow: visible;
+  text-overflow: initial;
 }
