--- a/src/component/UI/Layout/Header/styles.module.scss
+++ b/src/component/UI/Layout/Header/styles.module.scss
@@ -1,22 +1,44 @@
 .toolbar {
-	color: red;
+  color: red;
 }
 
 .brand {
-	position: relative;
-	padding: 18px 100px;
+  position: relative;
+  padding: 18px 100px;
 
-	> span {
-		position: absolute !important;
-		padding: 18px 100px !important;
-		top: 50%;
-		left: 0;
-		transform: translateY(calc(-50%));
-	}
+  > span {
+    position: absolute !important;
+    padding: 18px 100px !important;
+    top: 50%;
+    left: 0;
+    transform: translateY(calc(-50%));
+  }
 }
 
 .nav {
-	position: sticky;
-	top: 0;
-	z-index: 99;
+  position: sticky;
+  top: 0;
+  z-index: 99;
+}
+
+.ham {
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+}
+
+@media (max-width: 990px) {
+  .navLinkHL {
+    opacity: 0;
+    visibility: hidden;
+  }
+  .ham {
+    opacity: 1;
+    visibility: visible;
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
