--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -1,14 +1,15 @@
 *,
 html {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: 'Open Sans', sans-serif !important;
-	font-size: 16px;
-	font-weight: 300;
-	box-sizing: border-box;
-	background-color: #f9fafa;
+  font-family: 'Open Sans', sans-serif !important;
+  font-size: 16px;
+  font-weight: 300;
+  box-sizing: border-box;
+  //   background-color: #f9fafa;
+  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity));
 }
