--- a/src/assets/css/_rsuite.scss
+++ b/src/assets/css/_rsuite.scss
@@ -69,14 +69,16 @@
   }
 }
 
-
-
 .product_detail {
   .rs-panel-body {
     padding: 12px;
-    padding-top:0;
+    padding-top: 0;
   }
   .rs-panel-header {
     padding: 12px;
   }
+}
+
+p+p {
+  margin-top: 0 !important;
 }
