--- a/src/assets/css/_utility.scss
+++ b/src/assets/css/_utility.scss
@@ -1,16 +1,20 @@
 .title__divider {
-	display: block;
-	max-width: 50px;
-	height: 2px;
-	background: rgba(233, 102, 49, 1);
-	margin-top: 15px;
-	margin-bottom: 15px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-left: auto;
-	margin-right: auto;
+  display: block;
+  max-width: 50px;
+  height: 2px;
+  background: rgba(233, 102, 49, 1);
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .ck-editor__editable {
-	min-height: 300px;
+  min-height: 300px;
+}
+.auto-size {
+  width: 100%;
+  height: auto;
 }
