--- a/src/pages/product/[slug]/styles.module.scss
+++ b/src/pages/product/[slug]/styles.module.scss
@@ -146,3 +146,64 @@
     display: none;
   }
 }
+.groudpVariantForMobile {
+  display: none;
+  position: fixed;
+  bottom: 6px;
+  left: 6px;
+  right: 0;
+  background-color: #fff;
+  z-index: 9;
+  padding: 12px;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 12px);
+  @media (max-width: 768px) {
+    display: flex;
+
+    .productPricing {
+      font-size: 20px;
+    }
+    .action {
+      display: flex;
+      gap: 4px;
+      .btnIcon {
+        font-size: 16px;
+        gap: 4px;
+      }
+    }
+  }
+  @media (max-width: 625px) {
+    display: flex;
+    padding: 8px;
+    flex-direction: column;
+    gap: 8px;
+    transition: all 0.2s;
+
+    .productPricing {
+      font-size: 20px;
+      line-height: 16px;
+      flex-shrink: 0;
+      flex: unset;
+    }
+    .action {
+      display: flex;
+      gap: 4px;
+      flex-shrink: 0;
+      margin: 0;
+      width: 100%;
+      justify-content: center;
+      .btnIcon {
+        font-size: 16px;
+        padding: 6px 8px;
+        gap: 4px;
+        width: 50%;
+        justify-content: center;
+
+        svg {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+}
