--- a/src/pages/product/styles.module.scss
+++ b/src/pages/product/styles.module.scss
@@ -1,41 +1,42 @@
 .title {
-	font-size: 30px;
-	border-width: 0;
-	border-bottom-width: 1px;
-	border-style: solid;
-	border-color: rgba(226, 226, 226, 1);
-	margin-top: 30px;
-	margin-bottom: 30px;
-	white-space: normal;
-	overflow: visible;
-	text-overflow: initial;
+  font-size: 30px;
+  border-width: 0;
+  border-bottom-width: 1px;
+  border-style: solid;
+  border-color: rgba(226, 226, 226, 1);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  white-space: normal;
+  overflow: visible;
+  text-overflow: initial;
 }
 .divideLeft {
-	margin-left: 0;
+  margin-left: 0;
 }
 
-.filter {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
-	align-items: center;
-	gap: 12px;
+.sort {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
 }
 
-// .vr {
-// 	position: relative;
-// 	&::before {
-// 		position: absolute;
-// 		top: 0;
-// 		left: 0;
-// 		content: '';
-// 		background-color: rgba(0, 0, 0, 0.1);
-// 		height: 100%;
-// 		width: 1px;
-// 	}
-// }
 .pagi {
-	padding:10px 0;
-	display: flex;
-	justify-content: center;
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+}
+.hideOnMD {
+  display: block;
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+
+.showOnMD {
+  display: none;
+  @media (max-width: 768px) {
+    display: block;
+  }
 }
