--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -12,3 +12,7 @@ body {
   box-sizing: border-box;
   background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity));
 }
+
+a {
+  text-decoration: none;
+}
