--- a/src/component/Modal/Product/GroupVariant/VariantGroup/styles.module.scss
+++ b/src/component/Modal/Product/GroupVariant/VariantGroup/styles.module.scss
@@ -1,4 +1,3 @@
-
 .group {
   display: flex;
   flex-direction: column;
@@ -17,7 +16,8 @@
 .groupItem {
   display: flex;
   gap: 8px;
+  flex-wrap: wrap;
   .selectItem {
-    flex: 0 0 calc(100% / 4);
+    flex: 0 1 calc(100% / 4 - 8px);
   }
 }
