--- a/src/component/UI/Content/SideFilter/styles.module.scss
+++ b/src/component/UI/Content/SideFilter/styles.module.scss
@@ -1,14 +1,42 @@
 .row {
-	display: grid;
-	row-gap: 12px;
-	.featureImg {
-		display: flex;
-		flex-direction: column;
-		gap: 8px;
-	}
-	.filterItem {
-		display: flex;
-		flex-direction: column;
-		gap: 12px;
-	}
+  display: grid;
+  row-gap: 12px;
+  .featureImg {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+  .filterItem {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+}
+
+.customInputNumber {
+  span {
+    display: none;
+  }
+}
+
+.title {
+  h5 {
+    margin-bottom: 0;
+  }
+  div {
+    margin-left: 0;
+    margin-top: 0;
+  }
+}
+.btn {
+  &:hover,
+  &:active,
+  &:focus {
+    background: var(--rs-blue-800);
+    color: #fff;
+  }
+}
+.active {
+  background: var(--rs-blue-800);
+  color: #fff;
 }
