--- a/src/pages/product/styles.module.scss
+++ b/src/pages/product/styles.module.scss
@@ -40,3 +40,26 @@
     display: block;
   }
 }
+
+.grid {
+  display: grid;
+  column-gap: 12px;
+  row-gap: 12px;
+  margin: auto 24px;
+  margin-bottom: 24px;
+  @media (min-width: 1120px) {
+    grid-template-columns: repeat(5, 1fr);
+  }
+  @media (max-width: 1120px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @media (max-width: 990px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (max-width: 768px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (max-width: 525px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
