fix payment with vnpay

--- a/src/pages/user/styles.module.scss
+++ b/src/pages/user/styles.module.scss
@@ -14,8 +14,8 @@
   margin-left: 0;
 }
 .main {
-  background-color: transparent;
-  box-shadow: none;
+  // background-color: transparent;
+  // box-shadow: none;
 }
 .action {
   display: flex;
