--- a/src/component/UI/Content/Heading/styles.module.scss
+++ b/src/component/UI/Content/Heading/styles.module.scss
@@ -1,8 +1,26 @@
 .heading {
-}
-.header {
-  font-weight: 700;
-  font-size: 30px;
+  .header {
+    font-weight: 700;
+    // font-size: 30px;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 28px;
+  }
+  h3 {
+    font-size: 26px;
+  }
+  h4 {
+    font-size: 24px;
+  }
+  h5 {
+    font-size: 22px;
+  }
+  h6 {
+    font-size: 20px;
+  }
 }
 
 .center {
