--- a/src/component/UI/Content/Card/styles.module.scss
+++ b/src/component/UI/Content/Card/styles.module.scss
@@ -57,6 +57,11 @@
         font-size: 16px;
       }
     }
+    .wishList {
+      display: flex;
+      justify-content: flex-end;
+      direction: ltr;
+    }
   }
 }
 
