--- a/src/pages/product/[slug]/styles.module.scss
+++ b/src/pages/product/[slug]/styles.module.scss
@@ -216,3 +216,68 @@
     display: none;
   }
 }
+
+.tabs {
+  // border: 1px solid #eee;
+  box-shadow: inset 0 0 2px #ccc;
+  border-radius: 10px;
+  overflow: hidden;
+  h6 {
+    color: #fff;
+    padding: 6px 0;
+    margin: 0;
+    text-align: center;
+    font-size: 20px;
+    border: 0;
+    background-color: var(--rs-blue-800);
+  }
+  .tabsContent {
+    padding: 8px;
+  }
+}
+
+.slider {
+  .imgThumb {
+    display: flex;
+    gap: 12px;
+    overflow: auto;
+    padding: 10px 0 10px 0;
+    flex-wrap: nowrap;
+    .thumbItem {
+      cursor: pointer;
+      border-radius: 8px;
+      width: 80px;
+      height: 80px;
+      flex-shrink: 0;
+      overflow: hidden;
+      border: 1px solid #ccc;
+      background-color: #fff;
+      &.active {
+        border-color: var(--rs-blue-800);
+      }
+    }
+    &::-webkit-scrollbar {
+      width: 8px;
+      height: 4px;
+    }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+      // box-shadow: inset 5px px 5px #ccc;
+      border-radius: 10px;
+      background: #eee;
+      cursor: pointer;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background: var(--rs-blue-800);
+      border-radius: 10px;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background: var(--rs-red-800);
+    }
+  }
+}
