--- a/src/component/Product/ProductForm/styles.module.scss
+++ b/src/component/Product/ProductForm/styles.module.scss
@@ -67,28 +67,64 @@
   }
 }
 .groupVariant {
-  @media (max-width: 1200px) {
-    flex-wrap: wrap;
-    .divider {
-      display: none;
-    }
-    .productPricing {
-      text-align: center;
-      margin: 0 auto;
+  // @media (max-width: 1200px) {
+  //   flex-wrap: wrap;
+  //   .divider {
+  //     display: none;
+  //   }
+  //   .productPricing {
+  //     text-align: center;
+  //     margin: 0 auto;
 
-      &.variantPricing {
-        order: 1;
-        flex: 1;
-        flex-direction: column;
-        &:before {
-          height: 1px;
-          margin: 24px 0;
-          content: '';
-          width: 100%;
-          display: block;
-          background: rgba(0, 0, 0, 0.1);
-        }
-      }
+  //     &.variantPricing {
+  //       order: 1;
+  //       flex: 1;
+  //       flex-direction: column;
+  //       &:before {
+  //         height: 1px;
+  //         margin: 24px 0;
+  //         content: '';
+  //         width: 100%;
+  //         display: block;
+  //         background: rgba(0, 0, 0, 0.1);
+  //       }
+  //     }
+  //   }
+  // }
+  // display: flex;
+  // flex-direction: row;
+  // flex-wrap: wrap;
+  // gap: 12px;
+  // justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 8px;
+  row-gap: 8px;
+  button {
+    text-align: center;
+    justify-content: center;
+  }
+  > :nth-child(4) {
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 8px;
+    button {
+      width: 100%;
+    }
+  }
+  @media (max-width: 768px) {
+    grid-template-columns: repeat(1, 1fr);
+    > :nth-child(2) {
+      grid-column: 1/3;
+    }
+    > :nth-child(3) {
+      grid-column: 1/3;
+      grid-row: 2/3;
+      width: 100%;
+    }
+    > :nth-child(4) {
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 }
@@ -100,6 +136,10 @@
   flex-shrink: 0;
   font-size: 20px;
   flex: 0 0 150px;
+  margin-bottom: 0;
+  @media (max-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .btnIcon {
