add page , setting, file manager

--- a/src/component/UI/Content/ImageBlock/styles.module.scss
+++ b/src/component/UI/Content/ImageBlock/styles.module.scss
@@ -3,7 +3,8 @@
 	cursor: pointer;
 	position: relative;
 	top: 0;
-	background: #eee;
+	// background: #eee;
+	background-color: transparent;
 	border-radius: 4px;
 	overflow: hidden;
 	transition: all 0.2s;
