--- a/src/assets/css/_rsuite.scss
+++ b/src/assets/css/_rsuite.scss
@@ -92,3 +92,35 @@
 p + p {
   margin-top: 4px !important;
 }
+
+// Tree data
+
+.rs-tree-km {
+  .rs-tree-nodes {
+    div[role='treeitem'] {
+      display: flex !important;
+      align-items: flex-start;
+      padding: 0 !important;
+      flex-direction: column;
+      justify-content: center;
+      gap: 12px;
+      .rs-tree-node-label {
+        .rs-tree-node-label-content {
+          .km-node-item {
+            gap: 12px;
+            align-items: center;
+            justify-content: space-around;
+            span {
+              min-width: 150px;
+            }
+          }
+        }
+      }
+    }
+
+    // .rs-tree-node,
+    // .rs-tree-node-children {
+    //   padding: 0 !important;
+    // }
+  }
+}
