--- a/src/assets/css/_rsuite.scss
+++ b/src/assets/css/_rsuite.scss
@@ -124,3 +124,14 @@ p + p {
     // }
   }
 }
+
+// Menu
+
+.rs-dropdown-selected-within {
+  .rs-sidenav-item {
+    color: var(--rs-blue-800);
+    &:hover {
+      color: var(--rs-blue-800);
+    }
+  }
+}
