--- a/src/pages/admin/file-manager/styles.module.scss
+++ b/src/pages/admin/file-manager/styles.module.scss
@@ -3,12 +3,16 @@
   grid-template-columns: repeat(6, calc(100% / 6 - 12px));
   row-gap: 12px;
   column-gap: 12px;
-}
 
-.gridItem {
-  max-width: 100%;
-  display: block;
-  margin: auto;
+  .gridItem {
+    max-width: 100%;
+    display: block;
+    margin: auto;
+  }
+
+  .gridFullColumn {
+    grid-column: 1/-1;
+  }
 }
 
 .fileInformation {
