--- a/src/pages/product/styles.module.scss
+++ b/src/pages/product/styles.module.scss
@@ -47,6 +47,9 @@
   row-gap: 12px;
   margin: auto 24px;
   margin-bottom: 24px;
+  .gridItem {
+    text-decoration: none;
+  }
   @media (min-width: 1120px) {
     grid-template-columns: repeat(5, 1fr);
   }
@@ -60,6 +63,6 @@
     grid-template-columns: repeat(2, 1fr);
   }
   @media (max-width: 525px) {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
