--- a/src/pages/product/styles.module.scss
+++ b/src/pages/product/styles.module.scss
@@ -45,7 +45,7 @@
   display: grid;
   column-gap: 12px;
   row-gap: 12px;
-  margin: auto 24px;
+  // margin: auto 24px;
   margin-bottom: 24px;
   .gridItem {
     text-decoration: none;
