--- a/src/component/UI/Content/SideFilter/styles.module.scss
+++ b/src/component/UI/Content/SideFilter/styles.module.scss
@@ -40,3 +40,47 @@
   background: var(--rs-blue-800);
   color: #fff;
 }
+.filter,
+.sort {
+  overflow: hidden;
+}
+.flex {
+  display: grid;
+  column-gap: 12px;
+  grid-template-columns: min-content min-content min-content min-content 50px;
+  overflow: auto;
+  padding: 12px 0;
+}
+.tagGroup {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow: auto;
+  padding: 12px;
+  gap: 12px;
+  .tagItem {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 12px;
+    div {
+      padding: 4px;
+      font-weight: 500;
+      overflow: hidden;
+      white-space: normal;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      color: #333;
+      text-shadow: none;
+      text-transform: capitalize;
+      text-align: left;
+      min-width: 125px;
+      margin: 0;
+      cursor: pointer;
+      transition: var(--main-transition);
+      &:hover {
+        box-shadow: var(--main-box-shadow-hover) !important;
+      }
+    }
+  }
+}
