--- a/src/pages/category/[slug]/styles.module.scss
+++ b/src/pages/category/[slug]/styles.module.scss
@@ -82,7 +82,7 @@
   display: grid;
   column-gap: 12px;
   row-gap: 12px;
-  margin: auto 24px;
+  // margin: auto 24px;
   margin-bottom: 24px;
   @media (min-width: 1120px) {
     grid-template-columns: repeat(5, 1fr);
@@ -94,9 +94,9 @@
     grid-template-columns: repeat(3, 1fr);
   }
   @media (max-width: 768px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
   @media (max-width: 525px) {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
