--- a/src/pages/tin-tuc/styles.module.scss
+++ b/src/pages/tin-tuc/styles.module.scss
@@ -1,63 +1,90 @@
 .title {
-	font-size: 30px;
-	border-width: 0;
-	border-bottom-width: 1px;
-	border-style: solid;
-	border-color: rgba(226, 226, 226, 1);
-	margin-top: 30px;
-	margin-bottom: 30px;
-	white-space: normal;
-	overflow: visible;
-	text-overflow: initial;
+  font-size: 30px;
+  border-width: 0;
+  border-bottom-width: 1px;
+  border-style: solid;
+  border-color: rgba(226, 226, 226, 1);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  white-space: normal;
+  overflow: visible;
+  text-overflow: initial;
 }
 .divideLeft {
-	margin-left: 0;
+  margin-left: 0;
 }
 
 .filter {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
-	align-items: center;
-	gap: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
 }
 
 .pagi {
-	padding: 10px 0;
-	display: flex;
-	justify-content: center;
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
 }
 .categories {
-	overflow-x: auto;
+  overflow-x: auto;
 }
 .listCate {
-	display: grid;
-	grid-template-columns: repeat(10, minmax(120px, 1fr));
-	column-gap: 12px;
-	row-gap: 12px;
+  display: grid;
+  grid-template-columns: repeat(10, minmax(120px, 1fr));
+  column-gap: 12px;
+  row-gap: 12px;
 }
 .cateItem {
-	display: flex;
-	padding: 8px;
-	font-size: 16px;
-	color: #fff;
-	font-weight: 600;
-	overflow: hidden;
-	text-decoration: none;
-	border-radius: 10px;
-	box-shadow: var(--main-box-shadow);
-	min-height: 125px;
+  display: flex;
+  padding: 8px;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 600;
+  overflow: hidden;
+  text-decoration: none;
+  border-radius: 10px;
+  box-shadow: var(--main-box-shadow);
+  min-height: 125px;
 
-	background-color: #f28376;
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	position: relative;
-	text-align: left;
-	transition: var(--main-transition);
-	cursor: pointer;
+  background-color: #f28376;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  text-align: left;
+  transition: var(--main-transition);
+  cursor: pointer;
 
-	&:hover {
-		box-shadow: var(--main-box-shadow-hover);
-	}
+  &:hover {
+    box-shadow: var(--main-box-shadow-hover);
+  }
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 12px;
+  row-gap: 12px;
+  .gridItem {
+    &:not(:nth-child(1)),
+    &:not(:nth-child(2)),
+    &:not(:nth-child(3)) {
+      grid-column: 1/4;
+    }
+
+    &:nth-child(1) {
+      grid-column: 1/3;
+      grid-row: 1/3;
+    }
+    &:nth-child(2) {
+      grid-column: 3/4;
+      grid-row: 1/2;
+    }
+    &:nth-child(3) {
+      grid-column: 3/4;
+      grid-row: 2/3;
+    }
+  }
 }
