--- a/src/component/UI/Content/CardPost/styles.module.scss
+++ b/src/component/UI/Content/CardPost/styles.module.scss
@@ -1,85 +1,139 @@
+// .card {
+//   border-color: transparent;
+//   cursor: pointer;
+//   display: flex;
+//   flex-direction: row;
+//   gap: 12px;
+//   transition: var(--main-transition);
+//   .cardImg {
+//     position: relative;
+//     top: 0;
+//     background: #fff;
+//     border-top-left-radius: 4px;
+//     border-top-right-radius: 4px;
+//     flex: 0 0 250px;
+//     &::before {
+//       content: '';
+//       display: block;
+//       padding-top: 75%;
+//     }
+//     .img {
+//       width: 100%;
+//       // height: 100% !important;
+//       // width: 100% !important;
+//       object-position: center;
+//       object-fit: cover;
+//       border: 0;
+//       position: absolute;
+//       top: 0;
+//       left: 0;
+//       border-top-left-radius: 4px;
+//       border-bottom-left-radius: 4px;
+//     }
+//   }
+//   .content {
+//     padding: 12px 0 0;
+//     .title {
+//       font-size: 20px;
+//       text-transform: capitalize;
+//     }
+//     p {
+//       font-size: 16px;
+//       overflow: hidden;
+//       white-space: normal;
+//       display: -webkit-box;
+//       -webkit-line-clamp: 5;
+//       -webkit-box-orient: vertical;
+//       color: #000;
+//       margin: 12px;
+//       margin-left: 0;
+//     }
+//   }
+// }
+
+// .shadow {
+//   box-shadow: var(--main-box-shadow);
+//   transition: var(--main-transition);
+// }
+
+// .hover {
+//   &:hover {
+//     box-shadow: var(--main-box-shadow-hover);
+//   }
+// }
+
+// .border {
+//   border: 1px solid #eee;
+// }
+
+// .cover {
+//   .cardImg {
+//     .img {
+//       object-fit: cover;
+//     }
+//   }
+// }
+
+// .horizontal {
+//   display: grid;
+//   grid-template-columns: 1fr;
+//   grid-template-rows: auto auto;
+//   box-shadow: none;
+//   border: none;
+//   padding: 12px;
+//   border: 1px solid #ccc;
+//   .cardImg {
+//     border-bottom: 1px solid #eee;
+//   }
+// }
 .card {
-  border-color: transparent;
+  height: 100%;
+  overflow: hidden;
+  // background-color: #fff;
+  // box-shadow: var(--main-box-shadow);
+  // transition: var(--main-transition);
+  border: 0;
   cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  gap: 12px;
-  transition: var(--main-transition);
-  .cardImg {
-    position: relative;
-    top: 0;
-    background: #fff;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    flex: 0 0 250px;
-    &::before {
-      content: '';
-      display: block;
-      padding-top: 75%;
-    }
-    .img {
-      height: 100% !important;
-      width: 100% !important;
-      object-position: center;
-      object-fit: cover;
-      border: 0;
-      position: absolute;
-      top: 0;
-      left: 0;
-      border-top-left-radius: 4px;
-      border-bottom-left-radius: 4px;
-    }
-  }
   .content {
-    padding: 12px 0 0;
+    padding: 12px;
     .title {
-      font-size: 20px;
-      text-transform: capitalize;
-    }
-    p {
-      font-size: 16px;
-      overflow: hidden;
-      white-space: normal;
-      display: -webkit-box;
-      -webkit-line-clamp: 5;
-      -webkit-box-orient: vertical;
-      color: #000;
-      margin: 12px;
-      margin-left: 0;
-    }
-  }
-}
-
-.shadow {
-  box-shadow: var(--main-box-shadow);
-  transition: var(--main-transition);
-}
-
-.hover {
-  &:hover {
-    box-shadow: var(--main-box-shadow-hover);
-  }
-}
-
-.border {
-  border: 1px solid #eee;
-}
-
-.cover {
-  .cardImg {
-    .img {
-      object-fit: cover;
+      h3 {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        font-size: 22px;
+        line-height: 28px;
+      }
     }
   }
 }
 
 .horizontal {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
-  box-shadow: none;
-  border: none;
-  .cardImg {
+  display: flex;
+  flex-direction: column;
+}
+
+.vertical {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  &.card {
+    background-color: transparent !important;
+    box-shadow: none;
+    border: none;
     border-bottom: 1px solid #eee;
+    gap: 12px;
+    .cardImg {
+      max-width: 300px;
+      background-color: #fff;
+      border-radius: 8px;
+      .img {
+        width: 100%;
+        object-fit: cover;
+        border-radius: 4px;
+      }
+    }
   }
 }
