--- a/src/component/Product/ProductForm/styles.module.scss
+++ b/src/component/Product/ProductForm/styles.module.scss
@@ -141,6 +141,22 @@
     justify-content: center;
   }
 }
+.productRegularPrice {
+  font-weight: 500;
+  color: var(--rs-blue-800);
+  display: flex;
+  max-width: 100%;
+  flex-shrink: 0;
+  font-size: 14px;
+  flex: 0 0 150px;
+  padding-left: 20px;
+  margin-bottom: 0;
+  text-decoration: line-through;
+  opacity: 0.7;
+  @media (max-width: 768px) {
+    justify-content: center;
+  }
+}
 
 .btnIcon {
   display: flex;
