--- a/src/component/Modal/Product/GroupVariant/styles.module.scss
+++ b/src/component/Modal/Product/GroupVariant/styles.module.scss
@@ -1,6 +1,6 @@
 .groupVariant {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 200px 1fr;
   row-gap: 12px;
   column-gap: 12px;
   padding: 4px;
