--- a/app/src/assets/css/style.scss
+++ b/app/src/assets/css/style.scss
@@ -1,12 +1,13 @@
-@import './reset.scss';
+@import 'reset.scss';
+@import 'rsuite_base';
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import '~slick-carousel/slick/slick.css';
 @import '~slick-carousel/slick/slick-theme.css';
-@import './carousel';
-@import './utility';
-@import './rsuite';
-@import './root';
-@import './loader';
+@import 'carousel';
+@import 'utility';
+@import 'rsuite';
+@import 'root';
+@import 'loader';
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
 
